--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -25,6 +25,7 @@ body::-webkit-scrollbar {
     grid-template-rows:  1fr;
     width: 100%;
     font-family: Roboto;
+    background-color:var(--background-color);
 }
 
 .holy-head{
@@ -34,9 +35,6 @@ body::-webkit-scrollbar {
     justify-content:center;
 }
 
-.holy-c1{
-   
-}
 
 
 
@@ -110,6 +108,7 @@ h1{
 #aside-left{
     display:flex; 
     flex-direction: column;
+    align-items: center;
 }
 
 
@@ -198,7 +197,7 @@ article{
 
 .holy-grail{
     position:relative;
-    top: -50px;
+    top: 120px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 50px 0px 2fr 1fr;
@@ -213,14 +212,12 @@ article{
     justify-content:center;
 }
 
-.holy-c1{
-   
-}
+
 
 
 
 .holy-main{
-    background-color: rgb(245, 243, 243);
+   
     text-align: jusfity;
     padding: 20px;
    
@@ -241,7 +238,7 @@ article{
    
 }
 
-.holy-main p, {
+.holy-main p {
     text-align:justify;
 }
 
@@ -356,7 +353,7 @@ cards {
     display: grid;
    
     grid-gap: 30px;
-    width: 100%;
+    width: 90%;
     height: 100%;
     font-size: 10px;
     align-items: center;
