--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -1,3 +1,5 @@
+
+@import url('variables.css');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
@@ -13,6 +15,8 @@ body{
     flex-direction: column;
     overflow: hidden;
     position: relative;
+    padding-top: var(--height-header-lg);
+    padding-bottom: var(--height-header-lg);
 }
 
 /* Team */
@@ -27,6 +31,7 @@ body{
 .team-title{
     width: 100%;
     text-align: center;
+    font-size: 3em;
 }
 
 .container{
@@ -36,7 +41,7 @@ body{
 #main-container{
     flex-direction: column;
     padding: 10px;
-    justify-content: space-between;
+    justify-content: space-around;
     min-height: 100%;
 }
 
@@ -66,8 +71,8 @@ body{
     border-radius: 10px;
     max-height: 20vh;
     transform: translateY(0) scale(1);
-    -webkit-transition: max-height 1s, translate 1s, transform 1s;
-    transition: max-height 1s, translate 1s, transform 1s;
+    -webkit-transition: max-height 1s, translate 1s, transform 1s, top 1s, left 1s;
+    transition: max-height 1s, translate 1s, transform 1s,top 1s, left 1s;
 }
 
 
@@ -115,7 +120,7 @@ body{
 .text-description{
     font-family: 'Roboto';
     text-align: center;
-    padding: 0px 10px 0px;
+    padding: 0px 10px 10px;
     margin-top: 10px;
 }
 
@@ -129,7 +134,6 @@ body{
 
 .open{
     max-height: 100vh;
-    padding-bottom: 10px;
 }
 
 
@@ -165,9 +169,6 @@ body{
 }
 
 @media (orientation: landscape) {
-    #body-container{
-        min-height: 200vh;
-    }
 
     .item{
         max-height: 40vh;
@@ -193,9 +194,10 @@ body{
 }
 
   @media screen and (min-width: 992px) {
-      #body-container{
-        min-height: 100vh;
-      }
+
+      .team-title {
+        padding-top: 10px;
+    }
 
       #main-container{
           flex-direction: row;
@@ -203,23 +205,21 @@ body{
 
       .item, .invert-container{
         flex-direction: column;
-        max-height: 50vh;
-        width: 20%;
-        margin: 20px;
-        height: 50vh;
+        width: 20vw;
         align-items: center;
         justify-content: flex-start;
         flex-wrap: nowrap;
-    }
-
-    .button{
-        display: none;
+        min-height: 20vw;
     }
 
     .header, .invert-header{
         order: 1;
-        height: 50%;
+        font-size: 2em;
+        min-height: 20vw;
+        width: 20vw;
+        height: 20vw;
         flex-direction: column-reverse;
+        justify-content: center;
         padding: 0;
     }
 
@@ -232,13 +232,27 @@ body{
     .profil-description{
         font-size: 1em;
         height: auto;
+        margin-top: 10px;
     }
 
     .text-description{
         display: flex;
         order: 2;
-        height: 50%;
-        overflow: scroll;
+    }
+
+    .thumbnail-container{
+        display: flex;
+        width: 100vw;
+    }
+    
+    .move{
+        margin: 0;
+        -webkit-transform: scale(1.20) translateY(0);
+        transform: scale(1.20) translateY(0);
+    }
+    
+    .open .text-description{
+        display: flex;
     }
 
   }
