--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,15 @@
 :root {
     /* --bg-color: #ED6C6D;
     --shadow-color: #EB8080; */
-    --font-size-sm: 1.2rem;
-    --font-size-sm-bold: 1.4rem;
-    --font-size-md: 1.3rem;
+    --font-size: 1.2rem;
+    --font-size-bold: 1.3rem;
+    --height-header: 8vh;
+    /* --font-size-md: 1.3rem;
     --font-size-md-bold: 1.5rem;
     --font-size-lg: 1.6rem;
     --font-size-lg-bold: 1.8rem;
     --font-size-lf: 1.8rem;
-    --font-size-lf-bold: 2rem;
+    --font-size-lf-bold: 2rem; */
 }
 
 /* HTML Reset */
@@ -28,8 +29,8 @@ body {
     /* font-weight: bold; */
     font-style: normal;
     margin: 0;
-    padding-top: var(--height-header-sm);
-    padding-bottom: var(--height-header-sm);
+    padding-top: var(--height-header);
+    padding-bottom: var(--height-header);
     font-display: swap;
     background-color: var(--background-color);
 }
@@ -51,13 +52,14 @@ ul, li {
     top: 0;
     left: 0;
     width: 100vw;
-    height: var(--height-header-sm);
-    line-height: var(--height-header-sm);
+    height: var(--height-header);
+    line-height: var(--height-header);
     display: flex;
     align-items: center;
     flex-direction: row;
     border-bottom: 1px solid #000000;
     background-color: var(--bg-header-color);
+    justify-content: center;
 }
 
 /* Menu Burger => X */
@@ -67,8 +69,8 @@ ul, li {
     z-index: 100;
     top: 0;
     left: 0;
-    width: 8vh;
-    height: 8vh;
+    width: 6vh;
+    height: 6vh;
     margin: 1vh;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
@@ -141,13 +143,14 @@ ul, li {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vh;
+    width: fit-content;
+    margin: 0 1rem;
 }
 
 .logo {
     display: flex;
     justify-content: center;
-    height: 8vh;
+    height: 6vh;
     cursor: pointer;
 }
 
@@ -156,16 +159,16 @@ ul, li {
 
 nav {
     position: fixed;
-    margin-top: var(--height-header-sm);
+    margin-top: var(--height-header);
     top: 0;
 }
 
 .nav-menu {
     z-index: 99;
-    width: 100%;
-    height: 80vh;
+    width: 100vh;
+    height: 84vh;
     transition-duration: 0.4s;
-    transform: translateX(-580px);
+    transform: translateX(-600px);
     opacity: 1;
     background-color: #0000008F;
 }
@@ -180,7 +183,7 @@ footer {
     position: fixed;
     z-index: 100;
     width: 100%;
-    height: var(--height-header-sm);
+    height: var(--height-header);
     background-color: var(--bg-header-color);
     bottom: 0;
     left: 0;
@@ -188,17 +191,12 @@ footer {
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 100%;
-    height: 10vh;
     color: #FFFFFF;
-    border-top: 1px solid black;
-    background-color: var(--bg-header-color);
+    border-top: 1px solid black;;
 }
 
 .footer-content {
-    font-size: var(--font-size-sm);
-    margin: 3px;
-    padding: 2px 4px;
+    font-size: var(--font-size);
     cursor: pointer;
     text-align: center;
 }
@@ -217,6 +215,7 @@ footer {
 /* Footer Animation */
 
 .footer-content:active {
+    font-size: var(--font-size-bold);
     transition: font-size 0.3s ease-in-out;
     background-color: var(--shadow-header-color);
 }
@@ -240,8 +239,8 @@ footer {
 }
 
 .svg-inline--fa, .svg-inline--fa.fa-w-16, .svg-inline--fa.fa-w-18, .svg-inline--fa.fa-w-14 {
-    width: 2em;
-    height: 2em;
+    width: 1.25em;
+    height: 1.25em;
 }
 
 /* Desktop */
@@ -279,14 +278,14 @@ footer {
 .theme-switch-wrapper {
     cursor: pointer;
     width: 9vh;
-    height: 8vh;
+    height: 10vh;
     position: fixed;
     z-index: 100;
     top: 0;
     right: 0;
     display: flex;
     align-items: center;
-    margin: 1vh 2vh;
+    margin: 0vh 2vh;
 }
 /* em {
     margin-left: 10px;
@@ -297,7 +296,7 @@ footer {
     position: relative;
     width: 9vh;
     display: inline-block;
-    height: 5vh;
+    height: 7vh;
 }
 
 .theme-switch input {
@@ -384,13 +383,13 @@ input:checked + .slider:before {
         transition-duration: 0;
         transform: none;
         top: 0;
-        height: var(--height-header-sm);
+        height: var(--height-header);
         background-color: transparent;
     }
 
     .nav-slider {
         flex-direction: row;
-        height: var(--height-header-sm);
+        height: var(--height-header);
         padding: 0;
         margin-block-start: 0;
         margin-block-end: 0;
@@ -400,8 +399,8 @@ input:checked + .slider:before {
     }
 
     .nav-slider-item {
-        font-size: var(--font-size-sm);
-        width: 15vw;
+        font-size: var(--font-size);
+        width: 16vw;
         height: min-content;
         padding: 0 4px;
         cursor: pointer;
@@ -410,10 +409,9 @@ input:checked + .slider:before {
         font-weight: 600;
     }
 
-    ul.nav-slider-item:hover {
-        font-size: var(--font-size-sm-bold);
+    .nav-slider-item:hover {
+        font-size: var(--font-size-bold);
         font-weight: 900;
-        width: 15vw;
         transition: font-size 0.3s ease-in-out;
         background-color: var(--shadow-header-color);
         border: none;
@@ -425,22 +423,23 @@ input:checked + .slider:before {
 
     .footer-content {
         bottom: 0;
-        height: var(--height-header-sm);
+        height: var(--height-header);
         margin: 0;
     }
 
     .footer-contact {
         justify-content: center;
-        width: 25vw;
-        height: var(--height-header-sm);
+        width: 30vw;
+        height: var(--height-header);
         font-weight: 600;
     }
 
     .footer-contact:hover {
-        font-size: var(--font-size-sm-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
         transition: font-size 0.3s ease-in-out;
         background-color: var(--shadow-header-color);
+        width: 30vw;
     }
 
     .logo-size:hover {
@@ -452,200 +451,196 @@ input:checked + .slider:before {
 
 @media only screen and (min-width : 768px) {
     body{
-        padding-top: var(--height-header-md);
-        padding-bottom: var(--height-header-md);
+        padding-top: var(--height-header);
+        padding-bottom: var(--height-header);
     }
     .topnav{
-        height: var(--height-header-md);
-        line-height: var(--height-header-md);
+        height: var(--height-header);
+        line-height: var(--height-header);
     }
 
     .logo {
-        height: 9vh;
+        height: 6vh;
     }
     .nav-menu{
-        height: var(--height-header-md);
+        height: var(--height-header);
     }
     .nav-slider{
-        height: var(--height-header-md);
+        height: var(--height-header);
 
     }
 
     .nav-slider-item {
-        font-size: var(--font-size-md);
+        font-size: var(--font-size);
         width: 16vw;
         padding: 0 5px;
         font-weight: 600;
     }
 
     .nav-slider-item:hover {
-        font-size: var(--font-size-md-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
-        width: 16vw;
         border: none;
     }
     footer{
-        height: var(--height-header-md);
+        height: var(--height-header);
         transition: font-size 0.3s ease-in-out;
         background-color: var(--bg-header-color);
     }
 
     footer {
-        height: var(--height-header-md);
+        height: var(--height-header);
     }
 
     .footer-content {
         bottom: 0;
-        height: var(--height-header-md);
+        height: var(--height-header);
         margin: 0;
     }
 
     .footer-contact{
-        height: var(--height-header-md);
-        font-size: var(--font-size-md);
-        width: 27vw;
+        height: var(--height-header);
+        font-size: var(--font-size);
+        width: 30vw;
         font-weight: 600;
     }
 
     .footer-contact:hover {
-        font-size: var(--font-size-md-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
+        width: 30vw;
         transition: font-size 0.3s ease-in-out;
         background-color: var(--shadow-header-color);
-    }
-    .theme-switch-wrapper{
-        top: 0.5vh;
     }
 }
 @media only screen and (min-width : 992px) {
     body{
-        padding-top: var(--height-header-lg);
-        padding-bottom: var(--height-header-lg);
+        padding-top: var(--height-header);
+        padding-bottom: var(--height-header);
     }
     .topnav{
-        height: var(--height-header-lg);
-        line-height: var(--height-header-lg);
+        height: var(--height-header);
+        line-height: var(--height-header);
     }
 
     .logo {
-        height: 10vh;
+        height: 6vh;
     }
 
     .nav-menu{
-        height: var(--height-header-lg);
+        height: var(--height-header);
+            width: 100%;
     }
 
     .nav-slider{
-        height: var(--height-header-lg);
+        height: var(--height-header);
     }
 
     .nav-slider-item {
-        font-size: var(--font-size-lg);
+        font-size: var(--font-size);
         font-weight: 600;
-        width: 17vw;
+        width: 16vw;
         padding: 0 6px;
     }
 
     .nav-slider-item:hover {
-        font-size: var(--font-size-lg-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
-        width: 17vw;
+        width: 16vw;
         border: none;
     }
 
     footer{
-        height: var(--height-header-lg);
+        height: var(--height-header);
     }
 
     .footer-content {
         bottom: 0;
-        height: var(--height-header-lg);
+        height: var(--height-header);
         margin: 0;
     }
 
     .footer-contact {
-        font-size: var(--font-size-lg);
+        font-size: var(--font-size);
         width: 30vw;
-        height: var(--height-header-lg);
+        height: var(--height-header);
         font-weight: 600;
     }
     .footer-contact:hover {
-        font-size: var(--font-size-lg-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
         transition: font-size 0.3s ease-in-out;
         background-color: var(--shadow-header-color);
+        width: 30vw;
     }
-    .theme-switch-wrapper{
-        top: 1vh;
-    }
+
 
 }
 
 @media only screen and (min-width: 1200px) {
     body{
-        padding-top: var(--height-header-lf);
-        padding-bottom: var(--height-header-lf);
+        padding-top: var(--height-header);
+        padding-bottom: var(--height-header);
     }
     .topnav{
-        height: var(--height-header-lf);
-        line-height: var(--height-header-lf);
+        height: var(--height-header);
+        line-height: var(--height-header);
         background-color: var(--bg-header-color);
     }
 
     .logo {
-        height: 10vh;
+        height: 6vh;
     }
 
     .nav-menu{
-        height: var(--height-header-lf);
+        height: var(--height-header);
     }
 
     .nav-slider{
-        height: var(--height-header-lf);
+        height: var(--height-header);
+        width: 100%;
     }
 
     .nav-slider-item {
-        font-size: var(--font-size-lf);
-        width: 17vw;
+        font-size: var(--font-size);
+        width: 15vw;
         padding: 0 6px;
         font-weight: 600;
     }
 
     .nav-slider-item:hover {
-        font-size: var(--font-size-lf-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
-        width: 17vw;
+        width: 15vw;
         border: none;
     }
 
     footer{
-        height: var(--height-header-lf);
+        height: var(--height-header);
     }
 
     .footer-content {
         bottom: 0;
-        height: var(--height-header-lf);
+        height: var(--height-header);
         margin: 0;
     }
 
     .footer-contact {
-        font-size: var(--font-size-lf);
+        font-size: var(--font-size);
         width: 30vw;
-        height: var(--height-header-lf);
-        font-size: var(--font-size-lf);
+        height: var(--height-header);
+        font-size: var(--font-size);
         font-weight: 600;
     }
 
     .footer-contact:hover {
-        font-size: var(--font-size-lf-bold);
+        font-size: var(--font-size-bold);
         font-weight: 900;
+        width: 30vw;
         transition: font-size 0.3s ease-in-out;
         background-color: var(--shadow-header-color);
     }
 
-    .theme-switch-wrapper{
-        top: 2vh;
-    }
 
 }
 
