Navbar and footer heigth have been fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,15 @@ input:checked + .slider:before {
         border: none;
     }
 
+    .nav-slider-item:active {
+        font-size: var(--font-size-bold);
+        font-weight: 900;
+        width: 16vw;
+        transition: font-size 0.3s ease-in-out;
+        background-color: var(--shadow-header-color);
+        border: none;
+    }
+
     footer {
         flex-direction: row;
     }
