--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -23,9 +23,8 @@
 
 :root {
     /* Navbar and footer size vh */
-    --height-header-sm: 10vh; 
-    --height-header-md: 10vh;
-    --height-header-lg: 10vh;
-    --height-header-lf: 10vh;
+    --font-size: 1.2rem;
+    --font-size-bold: 1.3rem;
+    --height-header: 8vh;
 }
 
