Navbar and footer heigth have been fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ body {
 a {
     text-decoration: none;
     color: inherit;
+    width: 100%;
 }
 
 ul, li {
@@ -168,7 +169,7 @@ nav {
     width: 100vh;
     height: 84vh;
     transition-duration: 0.4s;
-    transform: translateX(-600px);
+    transform: translateX(-700px);
     opacity: 1;
     background-color: #0000008F;
 }
@@ -271,6 +272,7 @@ footer {
     background-color: gray;
     border: solid 2px #FFFFFF;
     width: 60vw;
+    text-align: center;
 }
 
 /* Theme switch */
@@ -337,9 +339,9 @@ input:checked + .slider:before {
 
 .slider img {
     position: relative;
-    width: 3vh;
-    top: 0vh;
-    left: 5vh;
+    width: 3vh;    
+    top: 0px;
+    left: 34px;
     transition: 0.4s;
 }
 
@@ -350,10 +352,10 @@ input:checked + .slider:before {
 
 .slider #sun {
     position: relative;
-    top: 0.5vh;
-    left: -3.3vh;
-    width: 4vh;
+    top: 4px;
+    left: -20px;
     transition: 0.4s;
+    width: 26px;
 }
 #moon {
     opacity: 0;
