--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,15 +279,15 @@ footer {
 
 .theme-switch-wrapper {
     cursor: pointer;
-    width: 9vh;
-    height: 10vh;
+    width: 80px;
+    height: 40px;
     position: fixed;
     z-index: 100;
     top: 0;
-    right: 0;
+    right: -30px;
     display: flex;
     align-items: center;
-    margin: 0vh 2vh;
+    
 }
 /* em {
     margin-left: 10px;
@@ -295,10 +295,11 @@ footer {
 } */
 
 .theme-switch {
-    position: relative;
-    width: 9vh;
+    position: absolute;
+    
+    width: 80px;
     display: inline-block;
-    height: 7vh;
+    height: 50px;
 }
 
 .theme-switch input {
@@ -306,23 +307,26 @@ footer {
 }
 
 .slider {
-    width: 9vh;
-    height: 5vh;
+    width: 75px;
+    height: 40px;
     cursor: pointer;
     position: absolute;
+    top: 20px;
+    left: -50px;
     transition: 0.4s;
     background-color: #CCCCCC;
 }
 
 .slider:before {
     background-color: #fff;
-    bottom: 0.5vh;
+    top: 5px;
+    left: 5px;
     content: "";
-    height: 4vh;
-    left: 0.5vh;
+    height: 30px;
+    
     position: absolute;
     transition: 0.4s;
-    width: 4vh;
+    width: 30px;
 }
 
 input:checked + .slider {
@@ -339,9 +343,8 @@ input:checked + .slider:before {
 
 .slider img {
     position: relative;
-    width: 3vh;    
-    top: 0px;
-    left: 34px;
+    width: 20px;    
+  
     transition: 0.4s;
 }
 
@@ -352,14 +355,17 @@ input:checked + .slider:before {
 
 .slider #sun {
     position: relative;
-    top: 0.5vh;
-    left: -3vh;
-    width: 4vh;
+    top: 7px;
+    left: -17px;
+   
     transition: 0.4s;
     width: 26px;
 }
-#moon {
+.slider #moon {
+    position: relative;
     opacity: 0;
+    right: -43px;
+    top: 4px;
 }
 
 @media only screen and (min-width: 576px) {
