--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -25,6 +25,6 @@
     /* Navbar and footer size vh */
     --font-size: 1.2rem;
     --font-size-bold: 1.3rem;
-    --height-header: 8vh;
+    --height-header: 80px;
 }
 
