Added article link and multi Fix

--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -1,4 +1,4 @@
-/* 
+
 body::-webkit-scrollbar {
     display: none;
   }
@@ -7,7 +7,7 @@ body::-webkit-scrollbar {
   body {
     -ms-overflow-style: none;  
     scrollbar-width: none;  
-  } */
+  } 
 
 
 
@@ -160,9 +160,9 @@ article{
 
 
 
-
-
-
+.carousel img{
+    display:none;
+}
 
 
 
@@ -200,7 +200,10 @@ article{
           justify-content: center;
           align-items: center;
       }
-
+      
+.carousel img{
+    display: inline-block;
+}
 
 
 
@@ -209,7 +212,7 @@ article{
     top: 20px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 50px 0px 2fr 1fr;
+    grid-template-rows: 50px 0px 2fr ;
     width: 100%;
     font-family: Roboto;
 }
@@ -295,6 +298,7 @@ h1{
 #aside-left{
     display:flex; 
     flex-direction: column;
+   
 }
 
 
@@ -452,12 +456,15 @@ container {
 
   .carousel {
     transform-style: preserve-3d;
+    width: 50%;
   }
+ 
   .carousel__photo {
     opacity: 0;
     position: absolute;
     top:0;
-    width: 100%;
+    width: 80%;
+    height: 300px;
     margin: auto;
     padding: 1rem 4rem;
     z-index: 100;
@@ -471,7 +478,7 @@ container {
 }
 
 .carousel img{
-    width: 100%;
+    width: 200%;
 }
 
 .carousel__photo.prev,
@@ -502,7 +509,7 @@ container {
   left:020px;
 }
 .carousel__button--next {
-  right:020px;
+  right:-150px;
   
  
 }
