--- a/assets/css/contactez-nous.css
+++ b/assets/css/contactez-nous.css
@@ -1,10 +1,31 @@
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+
+
+
 form{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
+
+#msg{
+    width: 300px;
+    height: 130px;
+}
+
+input{
+    width: 300px;
+}
 
 h2 {
     margin: 2vh auto;
@@ -26,8 +47,34 @@ label{
 }
 
 .button{
-    margin: 2vh auto;
-    width: 15vh;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 150px;
+    height: 80px;
     justify-content: center;
     display: flex;
+    align-items: center;
+    box-shadow: 2px 2px 2px grey;
+}
+
+
+.button:active{
+    transform: translateY(-3px) translateX(-3px)
+}
+
+
+
+@media screen and (min-width: 575px){
+        #contact-form-card{
+            width: 800px;
+            height: 500px;
+            border: 1px solid grey;
+            box-shadow: 3px 3px 3px grey;
+        }
+
+        h2{
+            margin-top: 80px;
+        }
+
+
 }
