--- a/assets/css/contactez-nous.css
+++ b/assets/css/contactez-nous.css
@@ -3,6 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 80vh;
+    
 }
 
 
@@ -15,6 +16,7 @@ form{
     height: 100%;
     justify-content: center;
     align-items: center;
+    color: var(--primary-color)
 }
 
 
@@ -54,12 +56,17 @@ label{
     justify-content: center;
     display: flex;
     align-items: center;
-    box-shadow: 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px rgb(161, 161, 161);
+    border-radius: 30px;
+    border: 1px solid grey;
+    outline-style:none;
 }
 
 
 .button:active{
-    transform: translateY(-3px) translateX(-3px)
+    transform: translateY(3px) translateX(3px);
+    outline-style:none;
+    box-shadow: 0px 0px 0px black;
 }
 
 
