--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,23 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+/* Variables */
 
+
+
+:root {
+    /* --bg-color: #ED6C6D;
+    --shadow-color: #EB8080; */
+    --font-size: 1.2rem;
+    --font-size-bold: 1.3rem;
+   
+    /* --font-size-md: 1.3rem;
+    --font-size-md-bold: 1.5rem;
+    --font-size-lg: 1.6rem;
+    --font-size-lg-bold: 1.8rem;
+    --font-size-lf: 1.8rem;
+    --font-size-lf-bold: 2rem; */
+}
 
 /* HTML Reset */
 
@@ -295,7 +311,7 @@ footer {
     height: 40px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
+    top: 25px;
     left: -50px;
     transition: 0.4s;
     background-color: #CCCCCC;
@@ -373,8 +389,8 @@ input:checked + .slider:before {
     .nav-menu {
         top: 0;
         display: flex;
-        
-       
+        transition-duration: 0s;
+        transform: none;
         top: 0;
         height: var(--height-header);
         background-color: transparent;
