--- a/assets/css/carousel.homepage.css
+++ b/assets/css/carousel.homepage.css
@@ -2,7 +2,46 @@
     display: none;
 }
 
+body .swiper-container {
+    display: none;
+}
+
 @media screen and (min-width: 992px) {
+    body .swiper-container {
+        display: flex;
+        width: 50%;
+        height: 35vh;
+        margin: 0;
+    }
+
+    .swiper-slide {
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .swiper-pagination-bullet {
+        font-size: 12px;
+        line-height: 20px;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        opacity: 1;
+        color: #000000;
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    body .swiper-pagination-bullet {
+        width: 20px;
+        height: 20px;
+    }
+
+    .swiper-pagination-bullet-active {
+        color: #FFFFFF;
+        background: #007AFF;
+    }
+
     .carousel {
         display: unset;
         align-items: center;
