--- a/assets/css/contactez-nous.css
+++ b/assets/css/contactez-nous.css
@@ -10,6 +10,7 @@ body{
 
 
 form{
+    width: 40%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -37,15 +38,22 @@ h2 {
 }
 
 label{
+    display: flex;
+    justify-content: space-between;
     font-size: 1.3rem;
-    margin: 1vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .complet{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     margin: 0 10vh;
+}
+
+#msg-cont{
+    justify-content: center;
 }
 
 .button{
@@ -67,6 +75,13 @@ label{
     transform: translateY(3px) translateX(3px);
     outline-style:none;
     box-shadow: 0px 0px 0px black;
+}
+
+.warning{
+	background-color: rgba(244, 110, 91, 0.3);
+	color: red;
+	padding: 5px;
+    font-size: 0.75rem;
 }
 
 
