--- a/assets/css/carousel.homepage.css
+++ b/assets/css/carousel.homepage.css
@@ -14,14 +14,14 @@ body .swiper-container {
         margin: 0;
     }
 
-    .swiper-slide {
+    body .swiper-slide {
         font-size: 18px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .swiper-pagination-bullet {
+    body .swiper-pagination-bullet {
         font-size: 12px;
         line-height: 20px;
         width: 20px;
@@ -40,56 +40,8 @@ body .swiper-container {
         height: 20px;
     }
 
-    .swiper-pagination-bullet-active {
-        color: var(--primary-color);
-    }
-
     body .swiper-pagination-bullet-active {
+        color: var(--primary-color);
         background-color: var(--ternary-color);
-    }
-
-    .carousel {
-        display: unset;
-        align-items: center;
-        flex-direction: column;
-        width: 50%;
-    }
-
-    .carousel > h2 {
-        font-family: Raleway, sans-serif;
-        font-size: 2rem;
-        margin-top: 3vh;
-        margin-bottom: 1.5vh;
-    }
-
-    .carousel__menu {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 20vw;
-        margin-top: 3vh;
-    }
-
-    .carousel__arrow {
-        fill: var(--secondary-color);
-    }
-
-    .carousel__arrow,
-    .carousel__arrow > button,
-    .carousel__arrow svg,
-    .carousel__button {
-        width: 1.5vw;
-        height: 1.5vw;
-    }
-
-    .carousel__button {
-        border-radius: 100%;
-        background-color: var(--secondary-color);
-    }
-
-
-    .carousel__button:focus {
-        border: 1px solid;
-        background-color: var(--secondary-color-transparent);
     }
 }
