--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -17,7 +17,13 @@ main {
 
 /* - Class utilities - */
 .small {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
+}
+
+@media screen and (min-width: 992px) {
+    .small {
+        font-size: .9rem;
+    }
 }
 
 .flex {
@@ -28,11 +34,13 @@ main {
     flex-direction: column;
 }
 
-.flex-left {
-    align-items: flex-start;
+.swiper-slide .ml-5 * {
+    margin: 0;
 }
 
 .ml-5 {
+    justify-content: space-between;
+    height: 60%;
     margin-left: 5%;
 }
 
