--- a/assets/css/contactez-nous.css
+++ b/assets/css/contactez-nous.css
@@ -28,12 +28,47 @@ form{
 
 input{
     width: 300px;
+    border: var(--thumbnail-border);
+    border-radius: 5px;
+    transition: transform 0.5s;
 }
+
+textarea{
+    border-radius: 5px;
+    border: var(--thumbnail-border);
+    transition: transform 0.5s;
+    resize: none;
+}
+
+input:hover{
+    outline: none;
+    transform: scale(1.05);
+    background-color: var(--thumbnail-background);
+}
+
+input:focus{
+    outline: none;
+    transform: scale(1.05);
+    background-color: var(--thumbnail-background);
+}
+
+textarea:hover{
+    outline: none;
+    transform: scale(1.05);
+    background-color: var(--thumbnail-background);
+}
+
+textarea:focus{
+    outline: none;
+    transform: scale(1.05);
+    background-color: var(--thumbnail-background);
+}
+
 
 h2 {
     margin: 2vh auto;
     display: flex;
-    font-size: var(--font-size-lg);
+    font-size: var(--font-size-bold);
     font-weight: 600;
 }
 
@@ -43,7 +78,9 @@ label{
     font-size: 1.3rem;
     margin-top: 1vh;
     margin-bottom: 1vh;
+    pointer-events:none;
 }
+
 
 .complet{
     display: flex;
