--- a/assets/css/ratings.css
+++ b/assets/css/ratings.css
@@ -392,7 +392,7 @@ card img {
         padding-right: 20%;
         height: 80px;
         width: 100%;
-        background-color: var(--heading-color);
+        background-color: var(--secondary-color);
         position: fixed;
 
         color: rgba(255, 255, 255, 0.493);
