--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,23 +1,38 @@
+@import url('variables.css');
+
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    
+    margin: 0;
+    padding:0;
+    width: 100%;
 }
 
-
-
-
-form{
-    width: 40%;
+#body-container{
+    width: 100vw;
+    max-width: 1200px;
+    margin: auto;
     display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    height: 100%;
     justify-content: center;
     align-items: center;
-    color: var(--primary-color)
+    padding-top: var(--height-header);
+}
+
+#contact-form-card{
+    height: 75vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    color: var(--primary-color);
 }
 
 
@@ -36,7 +51,6 @@ input{
 textarea{
     border-radius: 5px;
     border: var(--thumbnail-border);
-    transition: transform 0.5s;
     resize: none;
 }
 
@@ -94,17 +108,17 @@ label{
 }
 
 .button{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     width: 150px;
-    height: 80px;
+    height: 40px;
     justify-content: center;
     display: flex;
     align-items: center;
     box-shadow: 2px 2px 2px rgb(161, 161, 161);
     border-radius: 30px;
     border: 1px solid grey;
-    outline-style:none;
+    outline-style: none;
 }
 
 
@@ -121,19 +135,49 @@ label{
     font-size: 0.75rem;
 }
 
+.hidden{
+    transform: translateX(110vw);
+  }
+  
+.modal {
+    font-size: 1.25em;
+    position: relative;
+    z-index: 999;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+    border-radius: 5px;
+    background-color: #26e740;
+    transition-duration: 0.5s;
+}
 
 
-@media screen and (min-width: 575px){
-        #contact-form-card{
-            width: 800px;
-            height: 500px;
-            border: 1px solid grey;
-            box-shadow: 3px 3px 3px grey;
-        }
 
-        h2{
-            margin-top: 80px;
-        }
+@media screen and (min-width: 992px){
 
+    #contact-form-card{
+        width: 35%;
+        padding-bottom: 5px;
+    }
+
+    .hidden{
+        transform: translate(0, 12vh);
+    }
+
+    .modal {
+        font-size: 1.25em;
+        position: relative;
+        z-index: 999;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        width: 100%;
+        height: 10%;
+        border-radius: 5px;
+        background-color: #26e740;
+        transition-duration: 1s;
+    }
 
 }
