--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar {
 
 .holy-main{
     background-color: rgb(245, 243, 243);
-    text-align: jusfity;
+    text-align: justify;
     padding: 20px;
    
 }
@@ -220,7 +220,7 @@ article{
     top: 20px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 50px 0px 2fr ;
+    grid-template-rows: 0px 0px 2fr ;
     width: 100%;
     font-family: Roboto;
 }
@@ -369,7 +369,7 @@ article{
 
 cards {
     text-align:center;
-    
+    color: var(--primary-color);
     display: grid;
    
     grid-gap: 30px;
