--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -59,7 +59,7 @@ body::-webkit-scrollbar {
    
 }
 
-.holy-main p, {
+.holy-main p {
     text-align:justify;
 }
 
@@ -133,7 +133,7 @@ article{
 
 
 #strong{
-    font-weight: strong;
+    font-weight: bold;
     font-size: 15px;
    
 }
@@ -237,10 +237,8 @@ article{
 
 
 .holy-main{
-   
-    text-align: jusfity;
+    text-align: justify;
     padding: 20px;
-   
 }
 
 .holy-main article{
