--- a/assets/css/ratings.css
+++ b/assets/css/ratings.css
@@ -195,11 +195,13 @@ body {
 }
 
 .tableauSurvey {
-    margin-top: -518px;
+    margin-top: -398px;
+    margin-right: 280px;
     width: 50%;
-    height: 400px;
+    height: 300px;
     position: relative;
     right: 20px;
+
 }
 
 .filters {
@@ -395,7 +397,7 @@ card img {
         padding-right: 20%;
         height: 80px;
         width: 100%;
-        background-color: var(--secondary-color);
+        background-color: var(--shadow-header-color);
         position: fixed;
 
         color: rgba(255, 255, 255, 0.493);
@@ -575,7 +577,7 @@ card img {
         margin: 0;
         padding: 0;
         width: 100%;
-        height: 100vh;
+        height: 80vh;
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -613,13 +615,7 @@ card img {
         position: absolute;
     }
 
-    container {
-        width: 10%;
-        height: 30%;
-        padding-bottom: 0px;
-
-        top: 0px;
-    }
+    
 
     .btc {
         width: 100%;
@@ -652,8 +648,9 @@ card img {
     }
     #tableauSurvey {
         border: 0px solid var(--secondary-color);
-        width: 900px;
+        width: 500px;
         top: 30px;
+
     }
 
     .btc,
@@ -679,7 +676,7 @@ card img {
 
     .myChart {
         display: grid;
-        max-width: 300%;
+        max-width: 500px;
         min-width: 500px;
         grid-template-columns: 1fr;
         grid-template-rows: minmax(50px, 60px) 1fr;
