--- a/assets/css/article.homepage.css
+++ b/assets/css/article.homepage.css
@@ -9,6 +9,8 @@
 
 .article__title {
     font-family: 'Varela Round', sans-serif;
+    font-size: 1rem;
+    height: 5vh;
     margin-bottom: 1vh;
     text-align: center;
 }
