--- a/assets/css/tableau.css
+++ b/assets/css/tableau.css
@@ -1,41 +1,56 @@
-.tableau-grid{
-
-    width:600px;
-    height:250px;
-    display:grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    box-shadow: 3px 3px 3px grey;
-    border-radius: 10px;
-    font-family: Roboto;
-    border: 1px solid grey;
+.tableau__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
 }
 
-.tableau-grid img{
+.tableau-grid {
+    font-family: Roboto, sans-serif;
+    display: grid;
+    height: 20vh;
+    margin-left: 10%;
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px var(--secondary-color);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr 1fr;
+}
+
+.tableau-grid img {
     width: 20px;
 }
 
-.tableau-grid div{
-    
+.tableau-grid div {
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items:center;
 
 }
 
-.filters{
-
+.tableau__logo {
+    width: 50px;
     height: 50px;
-    position:relative;
-    bottom: -80px;
-    width: 100%;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    grid-column:span 6;
 }
 
-.title{
-    display:flex;
+.tableau__price {
+    align-self: flex-start;
+}
+
+.filters {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 0;
+    margin-top: 5vh;
+}
+
+.title {
+    display: flex;
     flex-direction: column;
+}
+
+#select-currency {
+    color: var(--primary-color);
+    background-color: var(--ternary-color);
 }
