--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -8,7 +8,7 @@
 .table-grid {
     font-family: Roboto, sans-serif;
     display: grid;
-    height: 20vh;
+    height: 100px;
     margin-left: 10%;
     border: 1px solid var(--secondary-color);
     border-radius: 10px;
