--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -9,13 +9,6 @@ body::-webkit-scrollbar {
     scrollbar-width: none;  
   } 
 
-
-
-
-
-
-
-
 .holy-grail{
     position:relative;
     top: -50px;
@@ -38,7 +31,8 @@ body::-webkit-scrollbar {
 
 
 .holy-main{
-    background-color: rgb(245, 243, 243);
+    background-color: var(--background-color);
+    color: var(--primary-color);
     text-align: justify;
     padding: 20px;
    
