--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -8,7 +8,6 @@ body{
     color: var(--primary-color);
     width: 100vw;
     height: 100%;
-    max-width: 1200px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -155,7 +154,8 @@ h2 {
   }
 
 .hidden{
-    transform: translateX(110vw);
+    -webkit-transform: translate(110vw, 0);
+    transform: translate(110vw, 0);
     display: none;
 }
   
@@ -218,6 +218,12 @@ h2 {
     #contact-form-card{
         width: 100%;
         padding-bottom: 5px;
+    }
+
+    .modal {
+        height: 20vh;
+        width: 20vw;
+        padding: 10px;
     }
 
     footer{
