--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -14,7 +14,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: calc(100vh - var(--height-header) * 2);
     color: var(--primary-color);
 }
 
@@ -81,7 +80,11 @@ main {
     display: none;
 }
 
-.graph {
+body .table-grid {
+    display: none;
+}
+
+.table__select {
     display: none;
 }
 
@@ -91,6 +94,10 @@ main {
 
 /* || Large */
 @media screen and (min-width: 992px) {
+    main {
+        height: calc(100vh - var(--height-header) * 2);
+    }
+
     #themeSwap {
         display: unset;
     }
