🐛 FIX: Carousel and table

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -80,10 +80,7 @@ main {
     display: none;
 }
 
-body .table-grid {
-    display: none;
-}
-
+body .table-grid,
 .table__select {
     display: none;
 }
