--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -76,6 +76,7 @@ textarea:hover{
     outline: none;
     transform: scale(1.05);
     background-color: var(--thumbnail-background);
+    color: var(--primary-color);
 }
 
 textarea:focus{
