--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40%;
+    width: 50%;
 }
 
 .table-grid {
@@ -34,7 +34,7 @@
 }
 
 .table__price {
-    align-self: flex-start;
+    align-self: center;
 }
 
 .filters {
